--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -26,4 +26,28 @@
 - AOP 사용 사례
 ```
 인프라 혹은 부가 기능의 모듈화로 활용하면 좋습니다. 대표적인 예로 로깅, 트랜잭션, 보안 또는 검증 부분으로 활용할 수 있습니다.
+
+공통된 기능을 재사용하는 기법으로, 부가 기능들을 상속이나 위임으로 처리하기에는 깔끔하게 모듈화가 어려우므로 
+이 문제를 해결하기 위해 횡단적 관점 분리인 AOP가 등장하게 되었습니다.
+
+어플리케이션 전체에 흩어진 공통기능이 하나의 장소에 관리된다는 점과 다른 서비스 모듈들이 
+본인의 목적에만 충실하고 그 외 사항들은 신경쓰지 않아도 된다는점에서 유용합니다.
+```
+
+- 알고리즘 그리디
+```
+당장 최적인 답을 선택하여 적합한 결과를 도출하는 것을 모토로 가지는 알고리즘 설계 기법
+부분의 최적 해들의 집합이 곧 전체 문제의 해답이 될 때 사용할 수 있습니다.
+```
+
+- Java 1.7과 Java 1.8 차이
+```
+Java1.8부터 스트림 API와 람다표현식을 사용 가능합니다.
+
+람다표현식은 식별자 없이 실행할 수 있는 함수 표현식을 의미합니다. 이를 통해서 함수 프로그래밍을 할 수 있습니다.
+
+스트림 API는 반복문이나 반복자를 사용하여 코드를 작성하는 것이 아닌 Stream API를 통해 데이터의 추상화하여
+다루게 되었습니다.
+
+저장된 데이터를 읽고 쓰기 위한 공통된 방법을 제공합니다.
 ```
