--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -51,3 +51,19 @@ Java1.8부터 스트림 API와 람다표현식을 사용 가능합니다.
 
 저장된 데이터를 읽고 쓰기 위한 공통된 방법을 제공합니다.
 ```
+
+- 보안취약점 개선한 경험이 있나요? 해당 경험에 대해 설명하시오.
+
+```
+1. SQL 인젝션는 악의적인 사용자가 보안상의 취약점을 이용하여 임의의 SQL문을 주입하고 실행되게 하여 비정상적인
+   동작을 하도록 조작 행위를 말합니다.
+   
+   Prepare statement활용(선처리 질의문)을 이용합니다. 동적쿼리의 경우 성능상 문제와 사용자 입력 값에 따라 의도하
+   지 않은 쿼리가 실행 될 수 있는 가능성이 있습니다. 선처리 질의문은 외부로부터 입력값을 제외한 쿼리부분을 
+   미리 컴파일 한 후 반복적으로 입력 값만을 설정해서 실행하는 방식으로 성능상 장점과 쿼리문 자체로 미리 컴파일되어 
+   입력값에 의해 영향을 받지 않으므로 SQL Injection 공격을 방어하는 효과가 있습니다.
+   
+2. CRSF 공격은 사이트 간 요청 위조 웹 어플리케이션 취약점 중 하나로, 사용자가 자신의 의지와 무관하게 공격자가 
+   의도한 행동을 하는 케이스입니다. 방지효과로 레퍼럴 체크 및 토큰활용한 경험이 있습니다.
+3. Xss 필터간 악성 스크립트 코드를 삽입한 공격이다. 방지효과로 스크립트 언어 필터링을 한 경험이 있습니다.   
+```
