--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -67,3 +67,41 @@ Java1.8부터 스트림 API와 람다표현식을 사용 가능합니다.
    의도한 행동을 하는 케이스입니다. 방지효과로 레퍼럴 체크 및 토큰활용한 경험이 있습니다.
 3. Xss 필터간 악성 스크립트 코드를 삽입한 공격이다. 방지효과로 스크립트 언어 필터링을 한 경험이 있습니다.   
 ```
+
+- 해왔던 업무 관련해서 소개
+```
+콘텐츠 관련 API/WEB을 개발한 경험이 있습니다. SK임직원몰인 이패밀리샵과 보험 마켓팅 시스템인 TAS를 운영해왔습니다.
+그리고 최근에는 KB생명에서 가입설계 청약 관련 비대면 모바일 영업 시스템을 개발 및 운영해왔습니다.
+```
+
+- 우아한 테크 캠프
+```
+TDD/DDD/리팩토링/객체지향프로그래밍 관련 미션 과제를 수행하면서 코드를 리뷰 요청하고 피드백을 받은 것을 고치는
+사이클로 진행하였습니다. 기간내에 모든 미션을 완수하였으며 우수수료생으로 이수하였습니다.
+```
+
+- TDD 장단점
+```
+장점 : 
+추가 구현의 용이함
+보다 튼튼한 객체 지향적인 코드 생산
+재설계 시간의 단축
+테스트 문서의 대체 가능
+디버깅 시간의 단축
+
+가장 큰 단점은 생산성의 저하입니다.
+```
+
+- 성능 모니터링 및 최적화 학습은 어떤 것인지 설명해주세요.
+```
+주로 부하테스트와 성능 최적화 관점에 대해서 학습하였습니다.
+부하테스트 관련하여 가용성 확보를 위한 다중화에 대한 설계 방향을 학습하였고 
+성능 최적화 관련하여서는  성능과 확장 관련 스케일 아웃 스케일 업을 해야하는 시점과 
+실제 지연시간이 발생하는 구간을 데이터로 확인하고 튜닝 대상을 선점하는 것에 대해 학습하였습니다. 
+```
+
+- 성능 튜님 경험이 있나요?
+```
+성능 모니터링 툴인 scouter를 활용하여 프로세스의 슬로우 쿼리를 개선한 경험이 있습니다. 
+Sql 컬럼을 경량화하고 where in 서브쿼리를 조인 쿼리로 대체, 인덱스를 추가하는 방향으로 성능을 최적화하였습니다. 
+```
