--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -178,3 +178,44 @@ jpa를 왜 사용해야 할까?
 * 표준
 ```
 
+- 해왔 던 일에 대해 소개해주세요
+```
+저는 웹개발자로써, 백엔드 그리고 프론트 앤드 개발 등 다양한 기술을 바탕으로 시스템을 개발 및 운영 해왔습니다. 
+KB생명보험에서는 모바일 기반의 비대면 방식의 영업지원시스템을 운영해왔습니다. 
+
+개발환경은 java angularJs, Sping 기반으로 이루어져있습니다. 
+
+개발 및 운영을 하면서, 테스트 중점적으로 진행을 하며, 이에 따라 점진적인 개선을 통해 안정적인 완성도를 높일수 있도록 항상 노력해왔습니다. 
+```
+
+- 이직 사유가 무엇인가요
+```
+비스 플랫폼의 백엔드 개발자로써, 커리어를 쌓고  좋은 환경과 좋은 개발자 동료를 만나고 싶어서 이직을 결심하게 되었습니다.  
+```
+
+- 마지막 한마디 해보세요.
+```
+개발자로써, 책임감있고 성실하게 일해왔습니다. 이번 면접을 통해 OOO에 입사하여 제 역량을 발휘하고 싶습니다. 
+회사내에 시스템에 적용해보고 꾸준히 개선해 나가면서 성과를 이뤄낼 것을 약속드립니다.
+```
+
+- 웹 서버 구축 해본 경험을 말씀해주세요.
+```
+토이프로젝트를 통해 AWS EC2와 S3를 구성하고 연동해보는 작업을 해봤습니다.
+최근에는 파이어베이스를 활용하여 스토리지, 호스팅을 통해 모바일웹페이지를 구성한 경험이 있습니다.
+```
+
+- Docker , 쿠버네티스 활용한 경험이 있나요?
+```
+학습해본 경험이 있습니다.
+```
+
+- MVC패턴과 MVVM패턴에 대해 설명해보세요
+```
+MVC란 Model View Controller의 약자로 애플리케이션을 세가지의 역할로 구분한 개발 방법론입니다. 사용자가 Controller를 조작하면 Controller는 Model을 통해서 데이터를 가져오고 그 정보를 바탕으로 시각적인 표현을 담당하는 View를 제어해서 사용자에게 전달하게 됩니다.
+
+MVVM 패턴이란, 
+* Model : 어플리케이션에서 사용되는 데이터와 그 데이터를 처리하는 부분입니다.
+* View : 사용자에서 보여지는 UI 부분입니다.
+* View Model : View를 표현하기 위해 만든 View를 위한 Model입니다. View를 나타내 주기 위한 Model이자 View를 나타내기 위한 데이터 처리를 하는 부분입니다.
+```
