--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -219,3 +219,22 @@ MVVM 패턴이란,
 * View : 사용자에서 보여지는 UI 부분입니다.
 * View Model : View를 표현하기 위해 만든 View를 위한 Model입니다. View를 나타내 주기 위한 Model이자 View를 나타내기 위한 데이터 처리를 하는 부분입니다.
 ```
+
+- React Redux에 대해 설명해보세요.
+
+```
+Redux를 사용하면 state를 별도의 전용 장소인 store에서 상태를 관리하고 React Component에서는 그걸 보여주기만 하는 용도로 사용합니다.
+```
+
+- 그럼 React의 Component는 무엇일까요
+```
+컴포넌트는 리액트로 만들어진 앱을 이루는 최소한의 단위입니다. 작으면서 단단한 컴포넌트와 만들어진 컴포넌트들
+유기적으로 연결되어 동작을 할때, 좋은 앱이 만들어집니다. 컴포턴트는 데이터를 입력받아 DOM Node를 출력하는 함수입니다.
+```
+
+- Docker와 VM 차이를 설명하시오.
+
+
+- DB 성능 튜닝 경험에 대해 설명하시오.
+- DB 인덱스란
+- Autoscaling에 대해 설명하시오.
