--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -238,3 +238,49 @@ Redux를 사용하면 state를 별도의 전용 장소인 store에서 상태를 
 - DB 성능 튜닝 경험에 대해 설명하시오.
 - DB 인덱스란
 - Autoscaling에 대해 설명하시오.
+
+- 쓰레드와 프로세스에 대해 설명하시오. 
+
+```
+프로세스란, 실행되는 프로그램의 메모리 할당을 받은 독립적인 인스턴스입니다.
+독립적인 메모리 영역이기에 자원 공유가 어려우므로, 한 프로세스가 다른 프로세스의 자원에 접근하려면 프로세스간 통신을 
+사용해야 합니다.
+```
+- 자바에서 쓰레드란 무엇인가요
+```
+자바에서 JVM은 운영체제의 역할을 합니다.
+자바에서는 프로세스가 존재하지 않고 스레드만 존재하며, 자바 스레드는 JVM에 의해 스케줄되는 실행 단위 코드 블록입니다.
+
+자바에서 스레드 스케줄링은 전적으로 JVM에 의해 이루어집니다.
+- 스레드가 몇 개 존재하는지
+- 스레드로 실행되는 프로그램 코드의 메모리 위치는 어디인지
+- 스레드의 상태는 무엇인지
+- 스레드 우선순위는 얼마인지
+```
+
+- 멀티쓰레드에 대해 설명하시오.
+```
+쓰레드란 프로세스 내에서 실행되는 시간의 흐름 단위로 프로세스는 최소 하나 이상의 스레드를 갖는다는 것을 의미합니다.
+그렇다면 멀티쓰레드란, 프로세스 내에 실행흐름단위를 동시에 처리할 수 있는 것을 의미합니다.
+```
+
+- 멀티쓰레드에 대한 장단점을 말씀해주세요.
+```
+장점으로는, 멀티쓰레드를 사용하면 하나의 프로세스에서 여러개의 쓰레드를 사용하기 때문에 자원소모가 줄어들며, 
+시스템 처리량이 향상되고 응답시간을 단축할 수 있습니다. 
+데이터영역과 힙영역을 공유하기에, 쓰레드간 데이터 교환이 필요하지 않습니다. 
+
+단점으로는, 임계영역(둘 이상의 쓰레드가 동시에 실행하면 문제를 일으키는 코드 블록) 공유하는 자원에 동시에 접근하는 경우, 프로세스와는 달리 스레드는 데이터와 힙 영역을 공유하기 때문에 어떤 쓰레드가 다른 쓰레드에서 사용 중인 변수나 자료구조에 접근하여 엉뚱한 값을 읽어오거나 수정할 수 있습니다.
+```
+
+- 프로세스 메모리구조에 대해 설명해주세요.
+```
+프로그램이 실행되기 위해서는 메모리가 로드가 되어야합니다. 프로그램에서 사용되는 변수들을 저장한 메모리 공간이 필요합니다. 그러한 종류로 코드영역, 데이터영역, 힙영역, 스택영역이 있습니다. 
+메모리의 코드 영역은 실행할 프로그램의 코드가 저장되는 영역입니다.
+CPU는 코드영역에 저장된 명령어를 하나씩 가져가서 처리하게 됩니다.
+데이터영역은 전역변수 또는 정적변수입니다. 프로그램 시작과 함께 할당되며 프로그램이 종료되면 소멸됩니다.
+스택영역은 함수의 흐름과 관계되는 지역변수와 매개변수가 저장되는 영역을 의미합니다.
+힙영역은 사용자가 직접관리할 수 있는 메모리 영역입니다. 메모리 공간이 동적으로 할당되고 해제가 됩니다./
+```
+
+
