--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -336,3 +336,13 @@ DIP -> 의존관계역전원칙(Dependency Inversion Principle) : "추상화에 
 추상화에 의존하며 구체화에 의존하면 안된다는 것을 의미 합니다.
 자신보다 변하기 쉬운 것에 의존하던 것을 추상화된 인터페이스나 상위 클래스를 두어 변하기 쉬운 것의 변화에 영향받지 않게 하는 것
 ```
+
+- 브라우저에서 주소창에 url 입력시 어떤일이 일어나는가
+```
+1. 브라우저의 주소창에 url 입력
+2. 브라우저 캐시에서 DNS 레코드를 확인하여 IP주소를 찾음 (없다면 DNS resolver를 통해 IP주소를 알아냄)
+3. 브라우저가 서버와 TCP 연결을 시작함
+4. 브라우저가 웹 서버에 HTTP 요청을 보냄
+5. 서버가 요청을 처리하고 응답을 되돌려보냄
+6. 브라우저는 서버가 보낸 HTML 내용을 표시
+```
