--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -346,3 +346,88 @@ DIP -> 의존관계역전원칙(Dependency Inversion Principle) : "추상화에 
 5. 서버가 요청을 처리하고 응답을 되돌려보냄
 6. 브라우저는 서버가 보낸 HTML 내용을 표시
 ```
+
+- 최근 사용해온 시스템 및 구조를 설명하시오
+- java ArrayList 배열 사이즈 할당 되는 로직을 설명하시오.
+```
+ArrayList는 기존 배열과 달리 동적으로 사이즈 할당이 가능합니다.
+기본은 사이즈를 10으로 진행하고 원소가 추가됨에 따라 size index에 값을 넣은 후 size를 1씩 증가시킵니다.
+사이즈가 꽉 찼을 경우( Object[]의 크기보다 크다면 ) 기존 크기에서 50%의 크기를 더해서 새로운 크기를 
+산정하게 됩니다.
+```
+
+https://sabarada.tistory.com/63?category=826240
+https://www.nextree.co.kr/p6506/
+
+- 리팩토링하면서 실무에서 어떻게 활용했었는지 말씀해주세요
+```
+중복을 제거하고 모듈화하거나, 불필요한 코드라든지 간소화할 수 있는 부분에 대해서 수정하는 방식으로 진행하였습니다. 
+이를 통해서 코드량을 줄이고 재사용성을 높이는 방향으로 유지보수용이하도록 변경하였습니다.
+```
+
+- 협업하면서 리팩토링할 시 어려운 부분은 없었는지 말씀해주세요.
+```
+사실상 리스크가 큰 부분에 대해서는 먼저 의견을 제시하고 개선 여부에 대한 피드백을 받았습니다.
+그 외 사소한 부분이나 리스크가 덜한 부분은 업무하면서 같이 수정을 하고 수정한 코드를 공유하는 방식으로 진행하였습니다.
+```
+
+- inner클래스는 왜 static이어야 하는지
+```
+외부 참조로 인한 단점이 더 분명하므로 내부 클래스는 static으로 만들어야합니다.
+외부 참조는 2가지 단점이 있습니다
+1. 참조값을 담아야 하기 때문에, 인스턴스 생성시 시간적, 공간적으로 성능이 낮아집니다.
+2. 외부 인스턴스에 대한 참조가 존재하기, 가비지 컬렉션이 인스턴스 수거를 하지 못하여 메모리 누수가 생길 수 있습니다. 
+```
+
+- DI 종류와 선호하는 방식과 스프링에서 권장하는 DI는 무엇인가요
+```
+- 생성자 주입
+- 필드 주입
+- 세터 주입 
+3가지 방법이 있으며 Spring에서 권장하는 방법은 생성자를 통한 주입입니다.
+
+권장하는 이유는 
+1. 단일 책임의 원칙
+생성자의 인자가 많을 경우 코드량도 많아지고, 의존관계도 많아여 단일 책임의 원칙에 위배가 됩니다. 
+그래서 생성자 주입을 사용함으로써, 의존관계 복잡성을 쉽게 알 수 있어 리팩토링의 단초를 제공하게 됩니다.
+2. 테스트 용이성
+DI 컨테이너에서 관리되는 클래스는 특정 DI 컨테이너에 의존하지 않고 POJO여야합니다. DI컨테이너를 사용하지 않고도
+인스턴스화 할 수 있고, 단위 테스트도 가능하며 다른 DI 프레임워크로 전환할 수도 있게 됩니다.
+3. Immutability
+생성자 주입에서는 필드는 final로 선언할 수 있습니다. 불변 객체가 가능한데 비해
+Field injection은 final는 선언할 수 없기 때문에 객체가 변경 가능한 상태가 됩니다.
+4. 순환 의존성
+생성자 주입에서는 멤버 객체가 순환 의존성을 가질 경우 beanCurrentlyCreationException 발생해서 순환 의존성을 알 수 있게 됩니다.
+```
+
+- 가비지 컬렉터 G1에 대해 설명해주세요.
+https://imp51.tistory.com/entry/G1-GC-Garbage-First-Garbage-Collector-Tuning
+https://mirinae312.github.io/develop/2018/06/04/jvm_gc.html
+https://github.com/mkkim90/tech-interview/blob/master/contents/java.md
+https://mangkyu.tistory.com/119?category=872426
+
+- 가비지 컬렉터 G1의 장점에 대해 말씀해주세요
+```
+G1은 다른 GC 방식의 처리 속도를 능가하고 큰 메모리 공간에서 멀티 프로세스 기반으로 운영되는 애플리케이션을 위해
+고안되었습니다. 
+
+힙을 동일한 크기의 Region으로 나누고 가비지가 많은 Region에 대해 우선적으로 gc를 수행합니다.
+```
+
+- 자바 버전대별로 설명해주세요
+https://namu.wiki/w/Java#s-4.9
+https://johngrib.github.io/wiki/java-enhancements/
+https://i3utterfly.tistory.com/entry/JAVA-%EB%B2%84%EC%A0%84%EB%B3%84-%EC%A0%95%EB%A6%AC
+
+
+- git rebase란 무엇인가요
+```
+소스를 합치기 위한 명령어로써, 
+브랜치를 합치고 정렬함으로써, Merge보다 업무 히스토리를 정리할 수 있는 장점이 있습니다.
+```
+
+- rebase -i
+
+- primitive타입과 reference 타입을 말씀해주세요
+
+
