--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -430,4 +430,41 @@ https://i3utterfly.tistory.com/entry/JAVA-%EB%B2%84%EC%A0%84%EB%B3%84-%EC%A0%95%
 
 - primitive타입과 reference 타입을 말씀해주세요
 
+- MSA(Micro Service Archetecture)에 대해서 설명해주세요.
 
+```
+중요 기능들을 작게 나누어 독립적인 모듈 실행이 가능하도록 합니다.
+각 모듈의 추가, 수정, 배포, 복구 등등이 쉽고 해당 장애의 영향력을 최소화함으로써 유지보수성이 좋습니다.
+```
+
+- Spring Cloud에 대해 설명해주세요
+
+```
+Spring Cloud는 분산 시스템에서 공통적인 패턴을 모아 신속하게 구축할 수 있는 도구를 스프링 라이브러리 형태로
+제공하는 것을 의미합니다.
+```
+
+- 온프레미스(On-premise)와 오프프레미스(Off-premise)
+```
+온프레미스는
+자제적으로 보유한 전산실 서버에 직접 설치해 운영하는 방식입니다.
+보안, 중요 비지니스 서비스와 데이터는 온프레미스 환경에서 작업하는 경우가 많습니다.
+
+오프레미스는 클라우드를 일컫습니다.
+서버, 스토리지, 네트워크, SW 등 자원이 필요할 때 인터넷을 통해 서비스 형태로 제공 받아 이용하는 방식입니다.
+사용한 만큼 서버 비용을 지불합니다.
+```
+
+- 자바 접근제어자에 대해 설명해주세요. 
+
+```
+객체 지향에서 정보 은닉(data hiding)이란 사용자가 굳이 알 필요가 없는 정보는 사용자로부터 숨겨야 한다는 개념입니다. 그렇게 함으로써 사용자는 언제나 최소한의 정보만으로 프로그램을 손쉽게 사용할 수 있게 됩니다.
+
+자바에서는 이러한 정보 은닉을 위해 접근 제어자(access modifier)라는 기능을 제공하고 있습니다.
+접근 제어자를 사용하면 클래스 외부에서의 직접적인 접근을 허용하지 않는 멤버를 설정하여 정보 은닉을 구체화할 수 있습니다.
+자바에서는 다음과 같은 네 가지의 접근 제어자를 제공합니다.
+1. private : 전체
+2. public : 해당 클래스에서만 사용 가능합니다.
+3. default : 같은 패키지에서만 사용 가능합니다.
+4. protected : 같은패키지와 
+```
