--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -534,7 +534,7 @@ REQUIRED는 부모 트랜잭션이 존재한다면 부모 트랜잭션으로 합
 
 그외로 REQUIRED_NEW, MANDATORY, NESTED, NEVER, SUPPORT, NOT_SUPPORTED가 있습니다. 
 
-EQUIRES_NEW
+REQUIRED_NEW
 새로운 트랜잭션을 생성합니다.  각각의 트랜잭션이 롤백되더라도 서로 영향을 주지 않습니다.
 
 MANDATORY
