--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -622,3 +622,25 @@ Java, Spring, AngularJs, Oracle
 모바일의 기기별 클라이언트 오류에 대한 원인을 파악하는 것과 간헐적으로 발생하는 오류는 재실현하는 것도 어려움이 있었습니다. 고객의 컴플레인에 적극적으로 대응하기 위해서 클라이언트 전용 로그 수집 모듈을 개발하였습니다. 클라이언트 내에 발생할 수 있는 에러를 핸들링하여 서버API를 통해 DB에 적재하였습니다. 수천 에러 로그 자료를 수집하여 오류 유형을 30여 개로 추출하였습니다. 해당 원인을 분석하여 점진적인 개선을 통해 프로덕션의 품질을 향상시켰습니다.
 
 ```
+
+- 제너릭 erasure에 대해 설명해주세요
+```
+
+Erasure(소거)란, 원소타입을 컴파일 타입에만 검사하고 런타임에는 해당 타입 정보를 알 수 없는 것입니다.
+한마디로, 컴파일 타입에만 타입 제약조건을 정의하고 런타입에는 타입을 제거한다는 뜻입니다.
+
+아주 간단하게 설명하자면, Java의 Generic을 사용한 아래와 같은 코드는,
+List<Bar> someBarList = readSomeList(id);
+컴파일이 되는 순간 아래와 같이 변경됩니다.
+List someBarList = readSomeList(id);
+이것은 메서드 시그니처에도 동일하게 적용됩니다. 제너릭 구문이 지워져버린 List는 List<?> 와 같으며
+이것을 결과적으로 List<? extends Object>를 의미합니다.
+따라서 어떤 타입을 담고 있는 List 객체라도 예외 발생없이 바인딩 되었던 것입니다.
+```
+
+- autoscaling에 대해 설명해주세요
+```
+오토스케일링(Auto Scaling)은 클라우드의 유연성을 돋보이게 하는 핵심기술로 
+CPU, 메모리, 디스크, 네트워크 트래픽과 같은 시스템 자원들의 메트릭(Metric) 값을 
+모니터링하여 서버 사이즈를 자동으로 조절합니다.
+```
