--- a/question/질문모음.md
+++ b/question/질문모음.md
@@ -722,6 +722,64 @@ NoSQL & Cache 솔루션이며 메모리 기반으로 구성된 것입니다.
          모르겠습니다. 튜닝 경험은 없지만, Stop-the-world 의 시간을 줄이는 작업을 하는 것으로 알고 있습니다. 
 ``` 
 - 샤딩이 뭐죠, 어떤 이점을 가지고 있나요?
+```
+수평 파티셔닝이라고도 함
+
+데이터베이스 테이블에 저장된 레코드의 수가 늘어남에 따라 검색 성능이 떨어지거나 용량에 커짐
+
+샤딩이란 테이블을 row 단위로 나눠서 저장해 DB 용량을 줄이고 검색을 성능을 올리는 기법
+
+즉, 기존 테이블와 똑같은 스키마를 가지는 샤드라는 작은 단위로 나눠 저장하는 방식이다
+
+ 
+
+'샤드키'는 나눠진 샤드 중 어떤 샤드를 선택할 지 결정하는 키로, 샤드키 결정 방식에 따라 샤딩 방법이 나뉘게 된다.
+
+ 
+
+1) 해시 샤딩(Hash Sharding)
+
+해시 함수를 사용해 샤드 키를 나누는 방식
+
+ 
+
+(+) 구현이 간단
+
+(-) 샤드가 늘어나게 되면 해시 함수를 재설정해야하고, 해시 함수를 바꾸게 되면 기존에 저장된 샤드 키도 전부 바꿔야함
+
+(-) 즉, 확장성이 좋지 않음
+
+ 
+
+ 
+
+2) 다이나믹 샤딩(Dynamic Sharding)
+
+Locator Service를 통해 샤드키를 구성하는 방식
+
+ 
+
+(+) 샤드가 더 추가 된다해도 Locator Service 내 샤드키만 추가해 확장 가능
+
+(-) Locator Service에 종속적
+
+ 
+
+ 
+
+3) Entity Group
+
+관계가 되어있는 엔티티를 같은 샤드내에 구성하는 방식
+
+ 
+
+(+) 단일 샤드 내 쿼리가 효율적
+
+(+) 단일 샤드 내 강한 응집도
+
+(-) 다른 shard의 Entity가 연관되어 있는 경우 비효율적
+```
+
 
 - 매일 수백만건의 주문 데이터를 타임아웃 이슈 없이 어떻게 API로 받아낼 수 있을까
 
